<resources>
    <string name="app_name">SkyChannel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="subscribe">Subscribe</string>
    <string name="view">View</string>
    <string name="like">Like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="campaign">Campaign</string>
    <string name="sign_in_with_google">Sign in With Google</string>


    <string-array name="pre_array">
        <item>Select</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
    </string-array>

    <string name="pre_prompt">Select</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="buyCoin">Buy Coins</string>
    <string name="vip_account">VIP Account</string>
    <string name="subscriptions">Subscriptions</string>
</resources>